Upgrade to sbt 0.13.13 (#171)